--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -127,3 +127,19 @@ background-color: rgb(187, 52, 42);
 background-color: rgb(35, 236, 176);
 background-color: none;
 }
+
+
+/* footer */
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#root > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
